# solver

./: Cargo.toml
src/: groups.rs  lib.rs  main.rs  matrix.rs  metric.rs  solver.rs  tree.rs  utils.rs  words.rs  words_solver.rs
