[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["serde_derive"] }
serde_json = "1.0.117"

[profile.release]
strip=true
panic="abort"
lto=true
